# fetch-paper-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fetch-paper-api.py  target.jar.sha256
fetch-paper/: Cargo.toml
fetch-paper-cli/: Cargo.toml
fetch-paper-lib/: Cargo.toml
fetch-paper-lib/examples/: fetch_papermc.rs
fetch-paper-lib/src/: lib.rs  main.rs
fetch-paper/src/: main.rs
