[package]
name = "fetch-paper"
version = "0.1.1"
edition = "2021"
description = "cli that download latest build from papermc.io"
license = "MIT"

[[bin]]
name = "fetchpaper"
path = "src/main.rs"
test = false
bench = false

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
colog = "1.3.0"
fetch-paper-lib = "0.1.1"
log = "0.4.26"
tokio = { version = "1.40.0", features = ["macros", "rt"] }
